fix: added collapsable cards, updated background, added grouped by device_id, added max by status, added table for grouped records, upated logging for nodejs web socket

--- a/remote_attestation/web/app/css/style.css
+++ b/remote_attestation/web/app/css/style.css
@@ -1,5 +1,5 @@
 html, body {
-  background: #fefefe;
+  background: #eee;
 }
 
 * {
